fixed header on mobile

--- a/style.css
+++ b/style.css
@@ -524,6 +524,9 @@ html {
         width: 100%;
         height: 50em;
     }
+    header img {
+        padding-top: 1em;
+    }
     nav ul {
         margin: 0;
         padding: 0;
